[package]
name = "spl-escrow"
version = "0.1.0"
description = "Secure SPL Token Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# Pin constant_time_eq to avoid edition2024 issue
constant_time_eq = "=0.3.1"
